# Sakichan

./: .gitignore  .sakichan.md  CLAUDE.md  Cargo.toml  README.md  neodesign.md  orchestrator.rs
src/: commands.rs  config.rs  display.rs  executor.rs  handoff.rs  logger.rs  main.rs  ollama.rs  orchestrator.rs  rules.rs  slots.rs  state.rs
src/backend/: mod.rs  ollama.rs
