[package]
name = "sakichan"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
colored = "2"
rustyline = "14"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
anyhow = "1"
regex = "1"